# StaticString

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt
include/: StackString.h  StaticString.h
resources/: icon.rc
src/: main.cpp
